# ai-code-reviewer

./: .env.example  .gitignore  AI_Code_Reviewer_Interview_Guide.md  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
src/: server.py
src/config/: settings.py
src/mcp/: client.py
src/reviewer/: diff.py  engine.py  llm.py  report.py
src/reviewer/prompts/: analyze.xml  review.xml
