[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-code-reviewer"
version = "0.1.0"
description = "LLM-powered code review CLI and API server"
requires-python = ">=3.12"
dependencies = [
    # LLM
    "openai>=1.30",
    # HTTP (GitHub / GitLab API)
    "httpx>=0.27",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # API server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # CLI
    "click>=8.1",
    "rich>=13.7",
    # MCP client (optional — enables codebase cross-referencing via REVIEWER_MCP_URL)
    "mcp>=1.6.0",
    # Async
    "anyio>=4.4",
    # Logging
    "structlog>=24.2",
]

[project.scripts]
cr = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
